add imgs team and links ig and link wp

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -148,7 +148,6 @@ html(lang='en')
                                 | De Nuestra
                                 br
                                 | Historia!
-                                | Historia!
 
         // Team
         section#team.page-section.bg-light
@@ -157,24 +156,68 @@ html(lang='en')
                     h2.section-heading.text-uppercase Nuestro increíble equipo
                     h3.section-subheading.text-muted Pilares que hacen realidad los proyectos
                 .row
-                    .col-lg-6
+                    .col-lg-4
                         .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/team/3.jpg', alt='...')
-                            h4 Jhon Acevedo
-                            p.text-muted Lead Developer
-                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/akiradechill/', target="_blank", aria-label='Parveen Anand Instagram Profile')
-                                i.fab.fa-instagram
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/2.webp', alt='...')
+                            h4 David Ovallos
+                            p.text-muted CEO
+                            //- a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/akiradechill/', target="_blank", aria-label='David Ovallos Instagram Profile')
+                            //-     i.fab.fa-instagram
                             //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Parveen Anand Facebook Profile')
                             //-     i.fab.fa-facebook-f
                             //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Parveen Anand LinkedIn Profile')
                             //-     i.fab.fa-linkedin-in
-                    .col-lg-6
+                    .col-lg-4
                         .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/team/3.jpg', alt='...')
-                            h4 David Ovallos
-                            p.text-muted CEO
-                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/jhoncarlosam', target="_blank", aria-label='Diana Petersen Instagram Profile')
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/4.webp', alt='...')
+                            h4 Yofer Morales
+                            p.text-muted Productor e Ingeniero de Sonido
+                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/nycko_music', target="_blank", aria-label='Yofer Morales Instagram Profile')
                                 i.fab.fa-instagram
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
+                            //-     i.fab.fa-facebook-f
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen LinkedIn Profile')
+                            //-     i.fab.fa-linkedin-in
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/1.webp', alt='...')
+                            h4 Andersón Florez
+                            p.text-muted Diseñador Gráfico y Escritor
+                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/litera_ficcion/', target="_blank", aria-label='Andersón Florez Instagram Profile')
+                                i.fab.fa-instagram
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
+                            //-     i.fab.fa-facebook-f
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen LinkedIn Profile')
+                            //-     i.fab.fa-linkedin-in
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/6.webp', alt='...')
+                            h4 Inyerman Sepúlveda
+                            p.text-muted FullStack Developer C#
+                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/inyer_sp', target="_blank", aria-label='Inyerman Sepúlveda Instagram Profile')
+                                i.fab.fa-instagram
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
+                            //-     i.fab.fa-facebook-f
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen LinkedIn Profile')
+                            //-     i.fab.fa-linkedin-in
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/3.webp', alt='...')
+                            h4 Maicol Ruiz
+                            p.text-muted Ilustrador
+                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/maicolrg0111/', target="_blank", aria-label='Maicol Ruiz Instagram Profile')
+                                i.fab.fa-instagram
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
+                            //-     i.fab.fa-facebook-f
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen LinkedIn Profile')
+                            //-     i.fab.fa-linkedin-in
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/5.webp', alt='...')
+                            h4 Andrés Parra
+                            p.text-muted Diseñador Gráfico
+                            //- a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/jhoncarlosam', target="_blank", aria-label='Andrés Parra Instagram Profile')
+                            //-     i.fab.fa-instagram
                             //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
                             //-     i.fab.fa-facebook-f
                             //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen LinkedIn Profile')
@@ -206,89 +249,81 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase Contáctanos
-                    //- h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+                    h3.section-subheading.text-muted Puedes escribirnos a nuestro whatsapp, solo tienes que hacer click en el botón con el ícono de whatsapp.
+                    a.btn.btn-light.btn-social.mx-2(href='https://wa.link/1074mf', target="_blank", aria-label='Whatsapp')
+                            i.fab.fa-whatsapp
+                //- form#contactForm(data-sb-form-api-token='API_TOKEN')
+                //-     .row.align-items-stretch.mb-5
+                //-         .col-md-6
+                //-             .form-group
 
-                // * * * * * * * * * * * * * * *
-                // * * SB Forms Contact Form * *
-                // * * * * * * * * * * * * * * *
+                //-                 // Name input
+                //-                 input#name.form-control(
+                //-                     type='text',
+                //-                     placeholder='Tu nombre *',
+                //-                     data-sb-validations='required'
+                //-                 )
+                //-                 .invalid-feedback(data-sb-feedback='name:required')
+                //-                     | A name is required.
 
-                // This form is pre-integrated with SB Forms.
-                // To make this form functional, sign up at
-                // https://startbootstrap.com/solution/contact-forms
-                // to get an API token!
+                //-             .form-group
 
-                form#contactForm(data-sb-form-api-token='API_TOKEN')
-                    .row.align-items-stretch.mb-5
-                        .col-md-6
-                            .form-group
+                //-                 // Email address input
+                //-                 input#email.form-control(
+                //-                     type='email',
+                //-                     placeholder='Tu Email *',
+                //-                     data-sb-validations='required,email'
+                //-                 )
+                //-                 .invalid-feedback(data-sb-feedback='email:required')
+                //-                     | An email is required.
+                //-                 .invalid-feedback(data-sb-feedback='email:email')
+                //-                     | Email is not valid.
 
-                                // Name input
-                                input#name.form-control(
-                                    type='text',
-                                    placeholder='Tu nombre *',
-                                    data-sb-validations='required'
-                                )
-                                .invalid-feedback(data-sb-feedback='name:required')
-                                    | A name is required.
+                //-             .form-group.mb-md-0
 
-                            .form-group
+                //-                 // Phone number input
+                //-                 input#phone.form-control(
+                //-                     type='tel',
+                //-                     placeholder='Tu número *',
+                //-                     data-sb-validations='required'
+                //-                 )
+                //-                 .invalid-feedback(data-sb-feedback='phone:required')
+                //-                     | A phone number is required.
 
-                                // Email address input
-                                input#email.form-control(
-                                    type='email',
-                                    placeholder='Tu Email *',
-                                    data-sb-validations='required,email'
-                                )
-                                .invalid-feedback(data-sb-feedback='email:required')
-                                    | An email is required.
-                                .invalid-feedback(data-sb-feedback='email:email')
-                                    | Email is not valid.
+                //-         .col-md-6
+                //-             .form-group.form-group-textarea.mb-md-0
 
-                            .form-group.mb-md-0
+                //-                 // Message input
+                //-                 textarea#message.form-control(
+                //-                     placeholder='Tu mensaje *',
+                //-                     data-sb-validations='required'
+                //-                 )
+                //-                 .invalid-feedback(data-sb-feedback='message:required')
+                //-                     | A message is required.
 
-                                // Phone number input
-                                input#phone.form-control(
-                                    type='tel',
-                                    placeholder='Tu número *',
-                                    data-sb-validations='required'
-                                )
-                                .invalid-feedback(data-sb-feedback='phone:required')
-                                    | A phone number is required.
+                //-     // Submit success message
+                //-     //
+                //-     // This is what your users will see when the form
+                //-     // has successfully submitted
 
-                        .col-md-6
-                            .form-group.form-group-textarea.mb-md-0
+                //-     #submitSuccessMessage.d-none
+                //-         .text-center.text-white.mb-3
+                //-             .fw-bolder Form submission successful!
+                //-             | To activate this form, sign up at
+                //-             br
+                //-             a(href='https://startbootstrap.com/solution/contact-forms') https://startbootstrap.com/solution/contact-forms
 
-                                // Message input
-                                textarea#message.form-control(
-                                    placeholder='Tu mensaje *',
-                                    data-sb-validations='required'
-                                )
-                                .invalid-feedback(data-sb-feedback='message:required')
-                                    | A message is required.
+                //-     // Submit error message
+                //-     //
+                //-     // This is what your users will see when there is
+                //-     // an error submitting the form
 
-                    // Submit success message
-                    //
-                    // This is what your users will see when the form
-                    // has successfully submitted
+                //-     #submitErrorMessage.d-none
+                //-         .text-center.text-danger.mb-3 Error sending message!
 
-                    #submitSuccessMessage.d-none
-                        .text-center.text-white.mb-3
-                            .fw-bolder Form submission successful!
-                            | To activate this form, sign up at
-                            br
-                            a(href='https://startbootstrap.com/solution/contact-forms') https://startbootstrap.com/solution/contact-forms
-
-                    // Submit error message
-                    //
-                    // This is what your users will see when there is
-                    // an error submitting the form
-
-                    #submitErrorMessage.d-none
-                        .text-center.text-danger.mb-3 Error sending message!
-
-                    // Submit Button
-                    .text-center
-                        button#submitButton.btn.btn-primary.btn-xl.text-uppercase.disabled(type='submit') Enviar mensaje
+                //-     // Submit Button
+                //-     .text-center
+                //-         button#submitButton.btn.btn-primary.btn-xl.text-uppercase.disabled(type='submit') Enviar mensaje
 
         // Footer
         footer.footer.py-4
@@ -297,7 +332,7 @@ html(lang='en')
                     .col-lg-4.text-lg-start
                         | Copyright &copy; AdvanCore Website 2023
                     .col-lg-4.my-3.my-lg-0
-                        a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/thanatos/', target="_blank", aria-label='Instagram')
+                        a.btn.btn-dark.btn-social.mx-2(href='https://wa.link/mfk65m', target="_blank", aria-label='Instagram')
                             i.fab.fa-instagram
                         //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Facebook')
                         //-     i.fab.fa-facebook-f
@@ -320,10 +355,5 @@ html(lang='en')
 
         // Core theme JS
         script(src='js/scripts.js')
-
-        // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
-        // * *                               SB Forms JS                               * *
-        // * * Activate your form at https://startbootstrap.com/solution/contact-forms * *
-        // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 
         script(src='https://cdn.startbootstrap.com/sb-forms-latest.js')
