--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -332,7 +332,7 @@ html(lang='en')
                     .col-lg-4.text-lg-start
                         | Copyright &copy; AdvanCore Website 2023
                     .col-lg-4.my-3.my-lg-0
-                        a.btn.btn-dark.btn-social.mx-2(href='https://wa.link/mfk65m', target="_blank", aria-label='Instagram')
+                        a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/advan.core/', target="_blank", aria-label='Instagram')
                             i.fab.fa-instagram
                         //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Facebook')
                         //-     i.fab.fa-facebook-f
