--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -64,14 +64,14 @@ html(lang='en')
                             i.fas.fa-shopping-cart.fa-stack-1x.fa-inverse
                         h4.my-3 Desarrollo de Apps
                         p.text-muted
-                            | Ninguna de nuestras herramientas ha sido creada con el único fin de hacer algo, todas están orientadas a la solución de un determinado o determinados problemas de manera efectiva, ya sea InExtremis o JobSafe.
+                            | Ninguna de nuestras herramientas ha sido creada con el único fin de hacer algo. Todas están orientadas a la solución de un determinado o determinados problemas de manera efectiva, bien sea InExtremis o JobSafe.
                     .col-md-6
                         span.fa-stack.fa-4x
                             i.fas.fa-circle.fa-stack-2x.text-primary
                             i.fas.fa-laptop.fa-stack-1x.fa-inverse
                         h4.my-3 Desarrollo de VideoJuegos
                         p.text-muted
-                            | Mas que mostrarte de lo que somos capaces, queremos hacerte sentir lo que nuestros videojuegos favoritos lo hicieron con nosotros alguna vez. Desde miedo, angustia, admiración, tristeza, etc, que no pase desapercibida la experiencia AdvanCore.
+                            | Más que mostrarte de lo que somos capaces, queremos hacerte sentir lo que nuestros videojuegos favoritos lograron hacernos vivir en algún momento. Desde miedo, angustia, admiración, tristeza, felicidad, esperanza, furia, entre otras emociones. AdvanCore considera que esta experiencia, sin lugar a dudas, es incapaz de pasar desapercibida.
 
         // Portfolio Grid
         section#portfolio.page-section.bg-light
@@ -129,7 +129,7 @@ html(lang='en')
                                 h4.subheading El Comienzo
                             .timeline-body
                                 p.text-muted
-                                    | Ningún comienzo es meteórico cual cohete, y nuestra historia no es la excepción, todo comenzó por las ganas y el deseo de contar buenas historias. Nuestra intención desde un principio ha sido la magia de crear belleza para el mundo, apreciable e interactuable, es por eso que optamos por los videojuegos. Reunimos el equipo, inexpertos en nuestros campos, con la llama de quien desea en el corazón edificar sus ideas.Cada uno del equipo se esforzó por adquirir sus propias habilidades, siempre dialogando entre los implicados. Porque como la legión que somos no deseábamos dispersarnos y perder nuestro norte. Eramos conscientes de que el camino sería duro, pero nada nos impidió seguir adelante.
+                                    | Ningún comienzo es meteórico, cual cohete, y nuestra historia no es la excepción. Todo comenzó por las ganas y el deseo de contar buenas historias. Nuestra intención, desde un principio, ha sido la magia de crear belleza para el mundo (apreciable e interactuable). Es por eso que optamos por los videojuegos. Reunimos el equipo; Inexpertos en nuestros campos, pero con la llama de quien desea - en el corazón - edificar sus ideas. Cada miembro del equipo se esforzó por adquirir sus propias habilidades; Siempre dialogando entre los implicados. Porque como la legión que somos no deseábamos dispersarnos y perder nuestro norte. Éramos conscientes de que el camino sería desafiante, pero nada ni nadie nos impidió seguir adelante.
                     li.timeline-inverted
                         .timeline-image
                             img.rounded-circle.img-fluid(src='assets/img/about/2.jpg', alt='...')
@@ -139,11 +139,14 @@ html(lang='en')
                                 h4.subheading InExtremis y primeros vistazos de Thanatos
                             .timeline-body
                                 p.text-muted
-                                    | Si bien anhelábamos mostrar nuestras historias al mundo, no era la única rama en la cual nos queríamos decantar, desde un inicio el objetivo ha sido crear ciencia de la más alta calidad, y eso era algo que no descartaríamos en nuestro proceso por muy temprano que fuese InExtremis surgió de la observación, de la experiencia personal y del deseo de solucionar lo que estaba mal. No planeábamos que fuese sencillo, todo lo contrario, estábamos convencidos de su dificultad y por ende lo queríamos realizar. Al mismo tiempo que trabajamos duro y con disciplina para crear la primera parte de nuestro primero videojuego, un proyecto que cada vez se hacía más ambicioso, que estaba pareciendo un juego de gran envergadura que el proyecto de un videojuego indie.
+                                    | Si bien anhelábamos mostrar nuestras historias al mundo, no era la única rama en la cual nos queríamos decantar. Desde un inicio, el objetivo ha sido crear ciencia de la más alta calidad y, ese preciso detalle, era algo que no descartaríamos en nuestro proceso (por muy temprano que fuese). InExtremis surgió de la observación, de la experiencia personal y del deseo de solucionar lo que estaba mal. No planeábamos que fuese sencillo. Todo lo contrario, estábamos convencidos de su dificultad y, por ende, lo queríamos realizar. Al mismo tiempo que trabajábamos, con constancia y disciplina para crear la primera parte de nuestro videojuego, analizamos un proyecto que cada vez se hizo más ambicioso. El concepto de InExtremis nace como el arquetipo de un juego de auténtica envergadura, el cual puede ser ejecutado en un contexto real.
+                                    br
+                                    br
+                                    | De esta manera, el Proyecto Thanatos e InExtremis tienen como propósito sumergir al usuario en un universo de autosuperación personal.
                     li.timeline-inverted
                         .timeline-image
                             h4
-                                | ¡Se Parte
+                                | ¡Sé Parte
                                 br
                                 | De Nuestra
                                 br
@@ -158,7 +161,7 @@ html(lang='en')
                 .row
                     .col-lg-4
                         .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/custom/who/2.webp', alt='...')
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/2.webp', alt='Foto de David Ovallos')
                             h4 David Ovallos
                             p.text-muted CEO
                             //- a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/akiradechill/', target="_blank", aria-label='David Ovallos Instagram Profile')
@@ -169,7 +172,7 @@ html(lang='en')
                             //-     i.fab.fa-linkedin-in
                     .col-lg-4
                         .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/custom/who/4.webp', alt='...')
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/4.webp', alt='Foto de Yofer Morales')
                             h4 Yofer Morales
                             p.text-muted Productor e Ingeniero de Sonido
                             a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/nycko_music', target="_blank", aria-label='Yofer Morales Instagram Profile')
@@ -180,9 +183,9 @@ html(lang='en')
                             //-     i.fab.fa-linkedin-in
                     .col-lg-4
                         .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/custom/who/1.webp', alt='...')
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/1.webp', alt='Foto de Andersón Florez')
                             h4 Andersón Florez
-                            p.text-muted Diseñador Gráfico y Escritor
+                            p.text-muted Director Creativo y Escritor
                             a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/litera_ficcion/', target="_blank", aria-label='Andersón Florez Instagram Profile')
                                 i.fab.fa-instagram
                             //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
@@ -191,7 +194,7 @@ html(lang='en')
                             //-     i.fab.fa-linkedin-in
                     .col-lg-4
                         .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/custom/who/6.webp', alt='...')
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/6.webp', alt='Foto de Inyerman Sepúlveda')
                             h4 Inyerman Sepúlveda
                             p.text-muted FullStack Developer C#
                             a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/inyer_sp', target="_blank", aria-label='Inyerman Sepúlveda Instagram Profile')
@@ -202,7 +205,7 @@ html(lang='en')
                             //-     i.fab.fa-linkedin-in
                     .col-lg-4
                         .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/custom/who/3.webp', alt='...')
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/3.webp', alt='Foto de Maicol Ruiz')
                             h4 Maicol Ruiz
                             p.text-muted Ilustrador
                             a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/maicolrg0111/', target="_blank", aria-label='Maicol Ruiz Instagram Profile')
@@ -213,9 +216,11 @@ html(lang='en')
                             //-     i.fab.fa-linkedin-in
                     .col-lg-4
                         .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/custom/who/5.webp', alt='...')
-                            h4 Andrés Parra
-                            p.text-muted Diseñador Gráfico
+                            img.mx-auto.rounded-circle(src='assets/img/custom/who/5.webp', alt='Foto de Felipe Gallardo')
+                            h4 Felipe Gallardo
+                            p.text-muted Ilustrador, Diseñador Gráfico, Arquitecto
+                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/art_felipegallarp/', target="_blank", aria-label='Maicol Ruiz Instagram Profile')
+                                i.fab.fa-instagram
                             //- a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/jhoncarlosam', target="_blank", aria-label='Andrés Parra Instagram Profile')
                             //-     i.fab.fa-instagram
                             //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
@@ -225,7 +230,7 @@ html(lang='en')
                 .row
                     .col-lg-8.mx-auto.text-center
                         p.large.text-muted
-                            | Si quieres ser parte de nuestro equipo no dudes en ponerte en contacto con nosotros, juntos podemos lograr grandes cosas.
+                            | Si deseas ser parte de nuestro equipo, no dudes en ponerte en contacto con nosotros. "Juntos podemos lograr grandes cosas".
 
         // Clients
         //- div.py-5
@@ -249,7 +254,7 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase Contáctanos
-                    h3.section-subheading.text-muted Puedes escribirnos a nuestro whatsapp, solo tienes que hacer click en el botón con el ícono de whatsapp.
+                    h3.section-subheading.text-muted Puedes escribirnos a nuestro whatsapp. Solo tienes que hacer click en el botón con el ícono de whatsapp.
                     a.btn.btn-light.btn-social.mx-2(href='https://wa.link/1074mf', target="_blank", aria-label='Whatsapp')
                             i.fab.fa-whatsapp
                 //- form#contactForm(data-sb-form-api-token='API_TOKEN')
