changes img jpg to webp format and square

--- a/src/pug/includes/portfolio-modal-2.pug
+++ b/src/pug/includes/portfolio-modal-2.pug
@@ -11,7 +11,7 @@
                             // Project details
                             h2.text-uppercase InExtremis
                             p.item-intro.text-muted Gym
-                            img.img-fluid.d-block.mx-auto(src='assets/img/custom/portfolio/gym.jpg', alt='InExtremis')
+                            img.img-fluid.d-block.mx-auto(src='assets/img/custom/portfolio/3.webp', alt='InExtremis')
                             p Es una tendencia ascendente que las personas busquemos cuidar nuestra imagen más allá de una apariencia, gimnasios se crean en todas partes con el objetivo de que las personas saquen sus mejores versiones de sí mismas. Pero, ¿quién saca la mejor versión de esos gimnasios?; InExtremis es una herramienta que no acepta los errores para entregar el mejor servicio da igual a qué gimnasio asistas.Encontramos los errores financieros, capacitamos los entrenadores descuidados y mal preparados, mejoramos la imagen pública, orientamos a sus propietarios y llevamos de la mano a sus asociados. Un environment completo, un estilo de vida estoico donde prima la disciplina y las ganas de superar nuestras limitantes, InExtremis.
                             ul.list-inline
                                 li
