--- a/src/pug/includes/portfolio-modal-3.pug
+++ b/src/pug/includes/portfolio-modal-3.pug
@@ -11,7 +11,7 @@
                             // Project details
                             h2.text-uppercase SafeJob
                             p.item-intro.text-muted Servicio
-                            img.img-fluid.d-block.mx-auto(src='assets/img/custom/portfolio/safejob.jpg', alt='SafeJob')
+                            img.img-fluid.d-block.mx-auto(src='assets/img/custom/portfolio/2.webp', alt='SafeJob')
                             p Sabemos que los seres humanos estamos conectados a nuestros semejantes como nunca antes en la historia de la humanidad. Sin embargo, sabemos también lo alejados que estamos de los demás al mismo tiempo. Somos conscientes de la necesidad del trabajo digno y de las ganas de oportunidades para ser independientes, libres, pero seguros al mismo instante. No obstante, somos conscientes de lo difícil que puede resultar ser encontrar nuevos clientes confiables que a su vez confíen en nosotros como otorgadores de servicio. Tenemos presente las ganas que siente nuestra gente por querer libertad financiera, porque sus cuentas sean perfectas y el dinero le alcance, y también somos conocedores de que muchos queremos pensionarnos cuando llegue el momento.SafeJob conecta seres humanos con seres humanos, hacemos visibles oportunidades, entregando el mejor servicio de oferta de empleo informal en el que ninguna de las personas que esté usando nuestro servicio quedará por fuera de la protección de AdvanCore. No es un objetivo de AdvanCore venderte una herramienta, es un objetivo de AdvanCore que alcances la realización personal, da igual dónde estés y a lo que te dediques.
                             ul.list-inline
                                 li
