--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -86,7 +86,7 @@ html(lang='en')
                                 .portfolio-hover
                                     .portfolio-hover-content
                                         i.fas.fa-plus.fa-3x
-                                img.img-fluid(src='assets/img/custom/portfolio/game.jpg', alt='Thanatos game')
+                                img.img-fluid(src='assets/img/custom/portfolio/1.webp', alt='Thanatos game')
                             .portfolio-caption
                                 .portfolio-caption-heading Thanatos
                                 .portfolio-caption-subheading.text-muted VideoGames
@@ -97,7 +97,7 @@ html(lang='en')
                                 .portfolio-hover
                                     .portfolio-hover-content
                                         i.fas.fa-plus.fa-3x
-                                img.img-fluid(src='assets/img/custom/portfolio/gym.jpg', alt='InExtremis Gym')
+                                img.img-fluid(src='assets/img/custom/portfolio/3.webp', alt='InExtremis Gym')
                             .portfolio-caption
                                 .portfolio-caption-heading InExtremis
                                 .portfolio-caption-subheading.text-muted Gym
@@ -108,7 +108,7 @@ html(lang='en')
                                 .portfolio-hover
                                     .portfolio-hover-content
                                         i.fas.fa-plus.fa-3x
-                                img.img-fluid(src='assets/img/custom/portfolio/safejob.jpg', alt='SafeJob')
+                                img.img-fluid(src='assets/img/custom/portfolio/2.webp', alt='SafeJob')
                             .portfolio-caption
                                 .portfolio-caption-heading SafeJob
                                 .portfolio-caption-subheading.text-muted Bussines
