--- a/src/pug/includes/portfolio-modal-1.pug
+++ b/src/pug/includes/portfolio-modal-1.pug
@@ -11,7 +11,7 @@
                             // Project details
                             h2.text-uppercase Thanatos
                             p.item-intro.text-muted VideoGame
-                            img.img-fluid.d-block.mx-auto(src='assets/img/custom/portfolio/game.jpg', alt='Thanatos game')
+                            img.img-fluid.d-block.mx-auto(src='assets/img/custom/portfolio/1.webp', alt='Thanatos game')
                             p Acción, aventura, un mundo en guerra y seres de otro planeta, ¿qué es lo que está ocurriendo en el mundo de Petrov para que lo que experimenta no sea la conquista de una ciudad como cualquier otra? La tierra estará envuelta en el conflicto más descabellado y cruento que hayan visto las tierras de Stanislav, donde fuerzas más grandes que reyes o emperadores se verán absorbidas de manera irreversible a las luchas por estar en el bando ganador.
                             ul.list-inline
                                 li
