logo and text change negociar by descubre

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -53,7 +53,7 @@ html(lang='en')
         header.masthead
             .container
                 .masthead-subheading AdvanCore
-                a.btn.btn-primary.btn-xl.text-uppercase(href='#services') Negociar
+                a.btn.btn-primary.btn-xl.text-uppercase(href='#services') Descubre
 
         // Services
         section#services.page-section
